#1728: Fix - Missing scrollbar for legend in datasets

--- a/geonode_mapstore_client/client/themes/geonode/less/_legend.less
+++ b/geonode_mapstore_client/client/themes/geonode/less/_legend.less
@@ -16,5 +16,13 @@
 .gn-legend-wrapper {
     .ms-layers-tree {
         padding-top: 0;
+        &.legend-tree {
+            .ms-node-layer {
+                ul {
+                    max-height: 500px;
+                    overflow: auto;
+                }
+            }
+        }
     }
 }
